--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,7 +1,34 @@
+header
+{
+	margin: 0;
+	padding: 0;
+	height: 40vh;
+	background-color: #343A40;
+}
+header .headerContainer
+{
+	margin: 0;
+	padding: 0;
+	font-family: 'impact';
+	font-size: 30vw;
+	color: transparent;
+	background-image: linear-gradient(0deg, #343A40 ,rgb(46, 46, 46));
+	background-position: 50%;
+	background: linear-gradient(90deg, rgba(255,221,114,1) 1%, rgba(255,143,31,1) 46%, rgba(255,127,33,1) 86%,rgba(255,86,0,1) 100%);
+	-webkit-background-clip: text;
+	-webkit-text-stroke: 4px;
+	-webkit-text-stroke-color: rgb(236, 236, 236);
+	-webkit-text-fill-color: transparent;
+	transform: translateY(-100px);
+}
 h1{
 	padding: 2rem;
-	background-color: #FF4500;
-	color: #fff;
+	background: rgb(255,86,0);
+	background: linear-gradient(90deg, rgba(255,86,0,1) 1%,
+								   	   rgba(255,127,33,1) 46%,
+									   rgba(255,143,31,1) 86%,
+									   rgba(255,221,114,1) 100%);
+	color: rgb(236, 236, 236);
 }
 
 .gallery_box_single{
