--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -4,13 +4,15 @@ header
 	padding: 0;
 	height: 40vh;
 	background-color: #343A40;
+	overflow: hidden;
 }
 header .headerContainer
 {
 	margin: 0;
+	margin-left: 18%;
 	padding: 0;
 	font-family: 'impact';
-	font-size: 30vw;
+	font-size: 20vw;
 	color: transparent;
 	background-image: linear-gradient(0deg, #343A40 ,rgb(46, 46, 46));
 	background-position: 50%;
@@ -19,7 +21,7 @@ header .headerContainer
 	-webkit-text-stroke: 4px;
 	-webkit-text-stroke-color: rgb(236, 236, 236);
 	-webkit-text-fill-color: transparent;
-	transform: translateY(-100px);
+	transform: translateY(-17%);
 }
 h1{
 	padding: 2rem;
