--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -1,5 +1,6 @@
 header
 {
+	display: flex;
 	margin: 0;
 	padding: 0;
 	height: 40vh;
@@ -8,8 +9,7 @@ header
 }
 header .headerContainer
 {
-	margin: 0;
-	margin-left: 18%;
+	margin: auto;
 	padding: 0;
 	font-family: 'impact';
 	font-size: 20vw;
