--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -14,15 +14,32 @@ header .headerContainer
 	font-family: 'impact';
 	font-size: 20vw;
 	color: transparent;
-	background-image: linear-gradient(0deg, #343A40 ,rgb(46, 46, 46));
 	background-position: 50%;
 	background: linear-gradient(90deg, rgba(255,221,114,1) 1%, rgba(255,143,31,1) 46%, rgba(255,127,33,1) 86%,rgba(255,86,0,1) 100%);
 	-webkit-background-clip: text;
-	-webkit-text-stroke: 4px;
+	-webkit-text-stroke: 2px;
 	-webkit-text-stroke-color: rgb(255, 255, 255);
 	-webkit-text-fill-color: transparent;
 	transform: translateY(-17%);
 }
+
+header .headerContainer:hover
+{
+	margin: auto;
+	padding: 0;
+	font-family: 'impact';
+	font-size: 20vw;
+	color: transparent;
+	background-position: 50%;
+	background-image:  url('/assets/img/bgHeader.png');
+	-webkit-background-clip: text;
+	background-size: cover;
+	letter-spacing: 0.10em;
+	-webkit-text-stroke: 2px;
+	-webkit-text-stroke-color: rgb(255, 255, 255);
+}
+
+
 h1{
 	padding: 2rem;
 	background: rgb(255,86,0);
