--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -3,7 +3,8 @@ body {
 	background-size: cover;
     background-attachment: fixed;
     background-position: center;
-    background-repeat: no-repeat;
+	background-repeat: no-repeat;
+	backdrop-filter: blur(0.3rem);
 }
 header
 {
