--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -93,6 +93,13 @@ h1{
 }
 .gallery_box_single{
 	width: 100%;
+	background-color: rgba(52, 58, 64, 0.3);
+}
+.gallery_box_single img {
+	box-shadow: 0 0 5px black;
+}
+.gallery_box_single p {
+	text-shadow: 0 0 5px black;
 }
 .caption-text{
 	text-align: center;
